--- a/ui/voice/css/_voice.scss
+++ b/ui/voice/css/_voice.scss
@@ -1,8 +1,9 @@
 $c-mic-bg-hover: if($theme == 'light', $c-font-dimmer, transparent);
 
-#voice-control {
+#voice-bar {
   position: relative;
   user-select: none;
+  flex: 1 1 auto;
 }
 
 #voice-status-row {
