--- a/ui/coordinateTrainer/css/_coordinateTrainer.scss
+++ b/ui/coordinateTrainer/css/_coordinateTrainer.scss
@@ -159,15 +159,16 @@
   .coordinate-input {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    @include breakpoint($mq-not-x-small) {
-      display: block;
+    grid-template-areas: 'buttons buttons' 'voice voice' 'keyboard keyboard';
+    grid-row-gap: 1vh;
+    @include breakpoint($mq-x-small) {
+      grid-template-areas: 'keyboard voice' 'buttons buttons';
     }
   }
 
   .keyboard-container {
     @extend %flex-between;
-    grid-column: 1;
-    grid-row: 2;
+    grid-area: keyboard;
     width: 100%;
     a {
       margin-right: 2vw;
@@ -182,12 +183,11 @@
   }
 
   .voice-container {
-    grid-column: 2;
-    grid-row: 2;
+    grid-area: voice;
   }
 
   .files-ranks {
-    margin-bottom: 1vh;
+    grid-area: buttons;
     grid-column: 1 / 3;
     grid-row: 1;
     display: grid;
