--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -57,6 +57,7 @@ main.has-relay-tour {
       img {
         width: 100%;
         aspect-ratio: 2/1;
+        @include broken-img(2 / 1);
       }
     }
     &__image-upload {
