--- a/ui/common/css/abstract/_licon.scss
+++ b/ui/common/css/abstract/_licon.scss
@@ -130,3 +130,6 @@ $licon-Mask: ''; // e074
 $licon-Move: ''; // e075
 $licon-OneHalf: ''; // e076
 $licon-Mute: ''; // e077
+$licon-AccountCircle: ''; // e078
+$licon-Logo: ''; // e079
+$licon-Blindfold: ''; // e07a
