--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -1,3 +1,17 @@
+$mq-col3-side-height: calc(100vh - #{$site-header-outer-height} - #{$col1-uniboard-controls});
+
+main.is-relay {
+  @include breakpoint($mq-col3) {
+    .mchat {
+      flex: 1 1 38%;
+      margin-top: 2em;
+      &:hover {
+        flex: 0 0 50%;
+      }
+      @include transition;
+    }
+  }
+}
 main.has-relay-tour {
   grid-template-areas:
     'relay-tour'
@@ -16,26 +30,21 @@ main.has-relay-tour {
 
   @include breakpoint($mq-col3) {
     grid-template-columns: $col3-uniboard-side $block-gap var(--col3-uniboard-width) var(--gauge-gap) $col3-uniboard-table;
+    grid-template-rows: $mq-col3-side-height 2.5em;
     grid-template-areas:
       'side           . relay-tour relay-tour relay-tour'
-      'chat           . relay-tour relay-tour relay-tour'
       'uchat          . relay-tour relay-tour relay-tour'
       'round-training . relay-tour relay-tour relay-tour';
-
-    .mchat {
-      height: 48vh;
-    }
   }
 }
 
 main.analyse.is-relay:not(.has-relay-tour) {
   @include breakpoint($mq-col3) {
-    grid-template-rows: 30vh auto 15vh auto;
+    grid-template-rows: var(--cg-height) 2.5em;
     grid-template-areas:
       'side    . board gauge tools'
-      'chat    . board gauge tools'
-      'chat    . under .     controls'
-      'uchat   . under .     round-training';
+      'side    . under .     controls'
+      'side    . under .     round-training';
   }
 }
 
@@ -44,12 +53,20 @@ main.analyse.is-relay:not(.has-relay-tour) {
 
   &__side {
     grid-area: side;
-    @extend %box-neat, %flex-column;
-    background: $c-bg-box;
+    @extend %flex-column;
+    max-height: $mq-col3-side-height;
     &__name {
-      @extend %box-radius;
-      background: $c-bg-zebra;
+      @extend %box-radius-top, %metal;
+      flex: 0 0 auto;
       padding: 1em;
+      &:hover {
+        background: $c-primary;
+        color: $c-primary-over;
+      }
+    }
+    .chat__members {
+      flex: 0 0 auto;
+      height: unset;
     }
   }
 
@@ -216,74 +233,85 @@ main.analyse.is-relay:not(.has-relay-tour) {
 }
 
 .relay-games {
+  @extend %flex-column, %box-radius-bottom, %box-shadow;
+  background: $c-bg-box;
+  flex: 1 1 auto;
   overflow-y: auto;
   font-size: 0.9em;
-  max-height: 50vh;
-  .relay-game {
-    @extend %flex-center-nowrap;
-    align-items: stretch;
-    gap: 0.5em;
-    padding: 0.5em 1em;
-    border-bottom: $border;
-    &:hover {
-      background: mix($c-primary, $c-bg-box, 10%);
+}
+.relay-game {
+  @extend %flex-center-nowrap;
+  align-items: stretch;
+  gap: 0.5em;
+  padding: 0.5em 1em;
+  border-bottom: $border;
+  &:hover {
+    background: mix($c-primary, $c-bg-box, 10%);
+  }
+  &--current {
+    background: mix($c-primary, $c-bg-box, 20%);
+  }
+  &__players {
+    @extend %flex-column;
+    flex: 1;
+  }
+  &__player {
+    @extend %flex-between-nowrap;
+    // font-weight: bold;
+    color: $c-font;
+    good,
+    bad {
+      font-weight: bold;
     }
-    &__players {
-      @extend %flex-column;
+  }
+  &__gauge {
+    $white: #a0a0a0;
+    $black: #606060;
+    @if $theme-light {
+      $white: #fff;
+      $black: #888;
     }
-    &__player {
-      // font-weight: bold;
-      color: $c-font;
-    }
-    &__gauge {
-      $white: #a0a0a0;
-      $black: #606060;
-      @if $theme-light {
-        $white: #fff;
-        $black: #888;
-      }
-      position: relative;
-      flex: 0 0 1em;
-      border: $border;
-      border-left: 0;
-      margin-top: -1px;
-      overflow: hidden;
-      @extend %box-radius;
+    position: relative;
+    flex: 0 0 1em;
+    border: $border;
+    border-left: 0;
+    margin-top: -1px;
+    overflow: hidden;
+    @extend %box-radius;
 
-      &__black {
-        display: none;
+    &__black {
+      display: none;
+      width: 100%;
+      height: 50%;
+      background: $black;
+      transition: height 1s;
+    }
+
+    opacity: 0.7;
+    background: linear-gradient(to top, $white, $black);
+    &--set {
+      opacity: 1;
+      background: $white;
+      .mini-game__gauge__black {
+        display: block;
+      }
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        #{$start-direction}: 0;
+        #{$end-direction}: 0;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.7) inset;
+      }
+      tick {
+        position: absolute;
         width: 100%;
-        height: 50%;
-        background: $black;
-        transition: height 1s;
-      }
-
-      opacity: 0.7;
-      background: linear-gradient(to top, $white, $black);
-      &--set {
+        top: 2.5px;
         opacity: 1;
-        background: $white;
-        .mini-game__gauge__black {
-          display: block;
-        }
-        &::after {
-          content: '';
-          display: block;
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          #{$start-direction}: 0;
-          #{$end-direction}: 0;
-          box-shadow: 0 0 5px rgba(0, 0, 0, 0.7) inset;
-        }
-        tick {
-          position: absolute;
-          width: 100%;
-          top: 2.5px;
-          opacity: 1;
-          border-bottom: 5px solid fade-out($c-accent, 0.5);
-          height: 50%;
-        }
+        border-bottom: 5px solid fade-out($c-accent, 0.5);
+        height: 50%;
       }
     }
   }
