find somewhere to squeeze the broadcast admin/contributor UIs
we still need the chapters view for its contributor utilities

--- a/ui/analyse/css/study/relay/_admin.scss
+++ b/ui/analyse/css/study/relay/_admin.scss
@@ -68,6 +68,7 @@
     overflow-y: auto;
     white-space: nowrap;
     padding: 0.3em 0.7em;
+    max-height: 20vh;
 
     > div {
       @extend %flex-center-nowrap;
