--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -1,6 +1,9 @@
 $mq-col3-side-height: calc(100vh - #{$site-header-outer-height} - #{$col1-uniboard-controls});
 
 main.is-relay {
+  .relay-admin__container {
+    grid-area: relay-admin;
+  }
   @include breakpoint($mq-col3) {
     .mchat {
       flex: 1 1 38%;
@@ -18,23 +21,23 @@ main.has-relay-tour {
     'side'
     'chat'
     'uchat'
-    'round-training';
+    'relay-admin';
 
   @include breakpoint($mq-col2) {
     grid-template-areas:
-      'relay-tour           . side'
-      'relay-tour           . chat'
-      'relay-tour          . uchat'
-      'relay-tour . round-training';
+      'relay-tour . side'
+      'relay-tour . chat'
+      'relay-tour . uchat'
+      'relay-tour . relay-admin';
   }
 
   @include breakpoint($mq-col3) {
     grid-template-columns: $col3-uniboard-side $block-gap var(--col3-uniboard-width) var(--gauge-gap) $col3-uniboard-table;
     grid-template-rows: $mq-col3-side-height 2.5em;
     grid-template-areas:
-      'side           . relay-tour relay-tour relay-tour'
-      'uchat          . relay-tour relay-tour relay-tour'
-      'round-training . relay-tour relay-tour relay-tour';
+      'side        . relay-tour relay-tour relay-tour'
+      'uchat       . relay-tour relay-tour relay-tour'
+      'relay-admin . relay-tour relay-tour relay-tour';
   }
 }
 
@@ -44,7 +47,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
     grid-template-areas:
       'side    . board gauge tools'
       'side    . under .     controls'
-      'side    . under .     round-training';
+      'side    . under .     relay-admin';
   }
 }
 
