Change overflow to auto, Move styling to scss file
as per request, in alignment with repo style standards

--- a/ui/pagelets/css/_video.scss
+++ b/ui/pagelets/css/_video.scss
@@ -15,6 +15,10 @@
     }
   }
 
+  .page-menu__menu {
+    overflow-x: auto;
+  }
+
   .list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
