fix broadcast game list autoscroll

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -201,6 +201,7 @@
   flex: 1 1 auto;
   overflow-y: auto;
   font-size: 0.9em;
+  position: relative;
 }
 .relay-game {
   @extend %flex-center-nowrap;
