--- a/ui/site/css/tv/_single.scss
+++ b/ui/site/css/tv/_single.scss
@@ -27,7 +27,7 @@ $mq-col3: $mq-col3-uniboard;
     grid-template-rows: fit-content(0);
     grid-template-areas:
       'side . app   app'
-      'side . under .';
+      'side . under under';
 
     @include crosstable-large;
   }
@@ -37,6 +37,7 @@ $mq-col3: $mq-col3-uniboard;
   }
 
   .tv-history {
+    grid-area: now-playing;
     h2 {
       @extend %roboto, %page-text;
       font-size: 1.3em;
