--- a/ui/round/css/_app-layout.scss
+++ b/ui/round/css/_app-layout.scss
@@ -127,7 +127,7 @@
       }
     }
 
-    .compact-layout & {
+    &.compact-layout {
       grid-template-rows: fit-content(0) fit-content(0) 1fr fit-content(0);
       grid-template-columns: var(--col3-uniboard-main-size) $block-gap $col3-uniboard-table;
       grid-template-areas:
@@ -155,9 +155,10 @@
         grid-area: 2 / 3 / 5 / 4;
       }
       .rclock {
-        /* that weird shit is required so the clock goes above the player since they share the same grid cell */
         @include hand-width(margin-right);
+        /* that weird shit is required so the clock goes above the player since they share the same grid cell */
         justify-self: flex-end;
+        height: 25px;
         z-index: 1;
         background-color: $c-bg-high;
         .moretime,
@@ -215,7 +216,7 @@
       }
     }
 
-    .small-moves & {
+    &.small-moves {
       grid-template-rows: minmax(0, 1fr) auto auto auto auto auto auto auto auto minmax(0, 1fr);
       grid-template-areas:
         'board . .'
@@ -260,7 +261,19 @@
       grid-template-columns: var(--col2-uniboard-main-size-no-hands) $big-block-gap $col2-uniboard-table;
     }
   }
-  .compact-layout .main-v-chushogi & {
-    grid-template-columns: var(--col3-uniboard-main-size-no-hands) $big-block-gap $col3-uniboard-table;
+  .main-v-chushogi &.compact-layout {
+    @include breakpoint($mq-col2-uniboard) {
+      grid-template-columns: var(--col3-uniboard-main-size-no-hands) $big-block-gap $col3-uniboard-table;
+    }
+  }
+  .main-board.v-minishogi &.compact-layout,
+  .main-board.v-kyotoshogi &.compact-layout {
+    @include breakpoint($mq-col2-uniboard) {
+      padding-bottom: calc((100% - #{$hands-gap}) / 11 * 9 / 11 * 12);
+      .sg-wrap {
+        height: calc(100% / 9 * 5 / 7 * 11);
+        top: calc(100% / 9 * 5 / 7);
+      }
+    }
   }
 }
