Make spinner in setup bigger

--- a/ui/lobby/css/_setup.scss
+++ b/ui/lobby/css/_setup.scss
@@ -192,6 +192,8 @@ $c-slider: $c-setup;
   }
   .spinner {
     height: 85px;
+    width: 85px;
+    padding: 1rem 1.4rem;
   }
   .submit-error-message {
     position: absolute;
