--- a/ui/common/css/layout/_base.scss
+++ b/ui/common/css/layout/_base.scss
@@ -2,6 +2,7 @@ $vp-min-width: 320px;
 $vp-max-width: 1200px;
 
 body {
+  position: relative;
   --site-header-height: #{$site-header-short-height};
 
   @include breakpoint($mq-site-header-tall) {
