--- a/ui/analyse/css/_layout.scss
+++ b/ui/analyse/css/_layout.scss
@@ -57,6 +57,11 @@ body {
     grid-area: uchat;
   }
 
+  .stream-player-placeholder {
+    width: 100%;
+    height: 220px;
+  }
+
   .eval-gauge {
     grid-area: gauge;
     display: none;
