Show anon hooks to users, but no auto join

--- a/ui/lobby/css/app/_hook-list.scss
+++ b/ui/lobby/css/app/_hook-list.scss
@@ -83,7 +83,7 @@
   }
 }
 .lseeks .create {
-  margin-top: 20px;
+  margin: 20px 0;
   text-align: center;
   a.accent {
     background: $c-accent;
