Small css tweaks

--- a/ui/round/css/_control.scss
+++ b/ui/round/css/_control.scss
@@ -126,7 +126,6 @@
     position: relative; /* for rematch-decline */
     .fbt {
       padding: 12px 0;
-      margin: 1px 1px 0 1px;
     }
     > .fbt:first-child {
       margin-top: 0;
@@ -253,6 +252,7 @@
       left: 0;
       right: 0;
       bottom: 0;
+      margin-right: unset;
       pointer-events: none;
       background: $c-primary;
       opacity: 0;
