--- a/ui/round/css/_user.scss
+++ b/ui/round/css/_user.scss
@@ -15,7 +15,8 @@
   &.long a {
     letter-spacing: -0.5px;
   }
-  rating {
+  rating,
+  .ai-level {
     flex: 0 0 auto;
     margin: 0 0.25em 0 0.3em;
     color: $c-font-dim;
