add bottom margin to leaderboard table

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -201,7 +201,7 @@
   &__leaderboard {
     table {
       width: auto;
-      margin: 0 auto;
+      margin: 0 auto 1rem;
     }
     thead {
       background: none;
