avoid redrawing the tournament header when switching tabs

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -212,11 +212,9 @@
     margin: 3em var(--box-padding);
   }
 
-  &--leaderboard {
-    table {
-      width: auto;
-      margin: 0 auto 1rem;
-    }
+  &__leaderboard {
+    width: auto;
+    margin: 0 auto 1rem;
     thead {
       background: none;
       th {
