tweak broadcast multiboard style

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -241,6 +241,27 @@
       }
     }
   }
+
+  .study__multiboard {
+    @include breakpoint($mq-xx-large) {
+      margin: 0 calc(var(--box-padding) - 1em);
+      .now-playing a {
+        padding: 0.8em 1em;
+      }
+    }
+  }
+  .now-playing {
+    grid-template-columns: repeat(1, 1fr);
+    @include breakpoint($mq-small) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include breakpoint($mq-large) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @include breakpoint($mq-xx-large) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
 }
 
 .relay-games {
