--- a/ui/analyse/css/study/panel/_multiboard.scss
+++ b/ui/analyse/css/study/panel/_multiboard.scss
@@ -59,21 +59,19 @@
 
       color: $c-font;
       padding: 0.5em;
+      border: 1px solid transparent;
 
-      @include transition(background);
-
-      background: fade-out($c-bg-box, 0.6);
       overflow: hidden;
 
-      &:hover {
-        background: fade-out($c-link, 0.6);
+      &.active {
+        background: mix($c-primary, $c-bg-box, 20%);
         color: $c-font-clear;
+        border-color: mix($c-primary, $c-bg-box, 40%);
       }
-
-      &.active,
-      &:active {
-        background: $c-secondary;
-        color: $c-secondary-over;
+      &:hover {
+        background: mix($c-primary, $c-bg-box, 12%);
+        color: $c-font-clear;
+        border-color: mix($c-primary, $c-bg-box, 50%);
       }
 
       cg-board {
