more room for player names in arena leaderboard

--- a/ui/tournament/css/_app-standing.scss
+++ b/ui/tournament/css/_app-standing.scss
@@ -15,6 +15,9 @@
       display: inline-block;
       padding-#{$end-direction}: 5px;
       max-width: 140px;
+      @include breakpoint($mq-x-large) {
+        max-width: 200px;
+      }
     }
   }
 
