--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -7,6 +7,7 @@ main.is-relay {
       grid-area: side;
     }
   }
+  .analyse__round-training,
   .relay-admin__container {
     grid-area: relay-admin;
   }
